@@ -2,41 +2,24 @@ buildscript {
   repositories {
     mavenLocal()
     jcenter()
+    maven {
+      url 'https://dl.bintray.com/rszewczyk/maven'
+    }
   }
   dependencies {
-    classpath 'org.akhikhl.gretty:gretty:1.1.4'
-    classpath 'com.github.kulya:jmeter-gradle-plugin:1.3.3-2.10-SNAPSHOT'
+    classpath 'com.github.rszewczyk:jmeter-gradle-plugin:1.3.3-2.10'
   }
 }
 
 import com.github.kulya.gradle.plugins.jmeter.JmeterRunTask
 import com.github.kulya.gradle.plugins.jmeter.JmeterRunGuiTask
 
-apply plugin: 'war'
-apply plugin: 'org.akhikhl.gretty'
+apply plugin: 'java'
 apply plugin: 'jmeter'
 
 repositories {
   mavenLocal()
   jcenter()
-}
-
-gretty {
-  jvmArgs = [
-    '-Xms256m',
-    '-Xmx1536m',
-    '-XX:MaxPermSize=256m'
-  ]
-}
-
-farm {
-  servletContainer = 'tomcat7'
-  webapp 'org.ozoneplatform:marketplace:0.1.0', contextPath: '/marketplace'
-
-  afterEvaluate {
-    tasks.farmIntegrationTest.dependsOn tasks.jmeterRun
-    //tasks.test.dependsOn tasks.farmIntegrationTest
-  }
 }
 
 def propsFile = file 'jmeter.properties'
@@ -50,6 +33,9 @@ def apiResources = [
   'ListingActivity',
   'ListingComment',
   'ListingRelationships',
+  'Listing_Create',
+  'Listing_Update',
+  'Listing_Invalid',
   'Profile',
   'ProfileOrganizationStewards',
   'Scorecard',
@@ -57,7 +43,7 @@ def apiResources = [
 ]
 
 apiResources.each { resource ->
-  def testFile = file "test/${resource}/${resource}.jmx"
+  def testFile = file "test/${resource}.jmx"
 
   task "test$resource"(type: JmeterRunTask) {
     jmeterTestFiles = [testFile]
@@ -80,7 +66,7 @@ apiResources.each { resource ->
 
 jmeterRun {
     jmeterTestFiles = apiResources.collect { resource ->
-        file "test/${resource}/${resource}.jmx"
+        file "test/${resource}.jmx"
     }
 
     jmeterPropertyFile = propsFile
